[package]
name = "suziq"
version = "0.1.0"
authors = ["Jin Xue <csjinxue@outlook.com>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.2.0"
byteorder = "1.2"

[dev-dependencies]
tempfile = "3"