[package]
name = "suziq"
version = "0.1.0"
authors = ["Jin Xue <csjinxue@outlook.com>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.2.0"
byteorder = "1.2"
crc = "1"
fs2 = "0.4.3"
libc = "*"
log = "0.4"
env_logger = "0.7"
memmap = "0.7"
bitflags = "1.0"
ouroboros = "0.15.0"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["staticlib", "rlib"]
